[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/TriangleCell.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
shadow_size = 2

[node name="TriangleCell" type="Area2D"]
script = ExtResource( 1 )

[node name="VerticalEdge" type="Polygon2D" parent="."]

[node name="LeftEdge" type="Polygon2D" parent="."]

[node name="RightEdge" type="Polygon2D" parent="."]

[node name="ClearTimer" type="Timer" parent="."]
one_shot = true

[node name="LeftParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 2000
lifetime = 0.15
one_shot = true
explosiveness = 0.1
randomness = 1.0
emission_shape = 3
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
gravity = Vector2( 0, 1800 )
initial_velocity = 250.0
initial_velocity_random = 0.5

[node name="RightParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 2000
lifetime = 0.15
one_shot = true
explosiveness = 0.1
randomness = 1.0
emission_shape = 3
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
gravity = Vector2( 0, 1800 )
initial_velocity = 250.0
initial_velocity_random = 0.5

[node name="VerticalParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 2000
lifetime = 0.15
one_shot = true
explosiveness = 0.1
randomness = 1.0
emission_shape = 3
emission_points = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
gravity = Vector2( 0, 1800 )
initial_velocity = 250.0
initial_velocity_random = 0.5

[node name="GravityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GarbagePreview" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 1, 1, 0.784314 )

[node name="ChainTimerBarContainer" type="Node2D" parent="."]

[node name="ChainTimerBar" type="ProgressBar" parent="ChainTimerBarContainer"]
margin_right = 4.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 1.0
[connection signal="mouse_entered" from="." to="." method="_on_TriangleCell_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TriangleCell_mouse_exited"]
[connection signal="timeout" from="ClearTimer" to="." method="_on_ClearTimer_timeout"]
[connection signal="timeout" from="GravityTimer" to="." method="_on_GravityTimer_timeout"]
